Some small layout fixes to align edge and chrome

--- a/src/sass/index.scss
+++ b/src/sass/index.scss
@@ -27,11 +27,11 @@ a {
   }
 }
 
-.smallLogo {
+.smallLogo::before {
   content: url(../../src/images/uq-logo-white-minimal.svg);
 }
 
-.largeLogo {
+.largeLogo::before {
   content: url(../../src/images/uq-logo-white-2018.svg);
 }
 
